src/test/ui/parser/where-clauses-no-bounds-or-predicates.stderr
error: expected `:`, found `{`
  --> $DIR/where-clauses-no-bounds-or-predicates.rs:13:23
   |
LL | fn foo<'a>() where 'a {}
   |                       ^ expected `:`

error: aborting due to previous error

